# BarelyFunctional

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
include/: map.hpp  misc.hpp  pack.hpp  plumbing.hpp  uncurry.hpp  visit.hpp  wrap.hpp
lib/: CMakeLists.txt
tests/: CMakeLists.txt  map-tests.hpp  map_tests.hpp  misc_tests.hpp  plumbing_tests.hpp  testUtils.hpp  tests.cpp  uncurry_tests.hpp  visit_tests.hpp
